src/mkr_parser.output
Nonterminals useless in grammar

   valueList
   triple


Terminals unused in grammar

   "no"
   "optional"
   "some"
   "many"
   "the"
   "if"
   "then"
   "else"
   "unknown"
   "fi"
   "not"
   "and"
   "or"
   "xor"
   "implies"
   "causes"
   "because"
   "any"
   "all"
   "every"
   "while"
   "until"
   "when"
   "forSome"
   "forAll"
   "me"
   "I"
   "you"
   "it"
   "he"
   "she"
   "here"
   "now"
   "let"
   "**"
   "a"
   "."
   "PREFIX"
   "BASE"
   "Graph URI literal {"
   ERROR_TOKEN


Rules useless in grammar

  102 valueList: valueList "," value
  103          | value


Rules useless in parser due to conflicts

   13 viewOption: %empty


State 2 conflicts: 26 shift/reduce
State 31 conflicts: 1 shift/reduce
State 58 conflicts: 26 shift/reduce
State 63 conflicts: 26 shift/reduce
State 142 conflicts: 26 shift/reduce


Grammar

    0 $accept: Document $end

    1 Document: sentenceList

    2 sentenceList: sentenceList sentence
    3             | %empty

    4 nv: predicate "=" value

    5 pp: preposition objectList
    6   | preposition nvList

    7 value: object
    8      | "{" sentenceList "}"

    9 prefix: "@prefix"
   10       | "@mkb"
   11       | "@mke"

   12 viewOption: "in" variable
   13           | %empty

   14 nameOption: variable "::"
   15           | %empty

   16 sentence: viewOption nameOption sentence ";"
   17         | "{" sentenceList "}" ";"
   18         | "@base" "URI literal" ";"
   19         | prefix "identifier" "URI literal" ";"
   20         | "begin" variable subject ";"
   21         | "ho" objectList ";"
   22         | "rel" objectList ";"
   23         | "end" variable subject ";"
   24         | variable ":=" value ";"
   25         | doVerb object ";"
   26         | doVerb object ppList ";"
   27         | subject predicateObjectList ";"
   28         | subject doVerb object ";"
   29         | subject doVerb object ppList ";"
   30         | subject isVerb object ppList ";"
   31         | error ";"

   32 predicateObjectList: predicateObjectList "," predicateObject
   33                    | predicateObject

   34 predicateObject: hasVerb nv
   35                | hoVerb object
   36                | isVerb object

   37 collection: "(" ")"
   38           | "(" objectList ")"

   39 set: "[" "]"
   40    | "[" objectList "]"

   41 objectList: objectList "," object
   42           | object

   43 nvList: nvList "," nv
   44       | nv

   45 ppList: ppList pp
   46       | pp

   47 subject: resource
   48        | blankNode
   49        | collection
   50        | set
   51        | literal
   52        | variable

   53 predicate: resource
   54          | preposition
   55          | variable

   56 object: resource
   57       | blankNode
   58       | collection
   59       | set
   60       | literal
   61       | variable

   62 variable: "variable"

   63 isVerb: "is"

   64 hoVerb: "isu"
   65       | "iss"
   66       | "isa"
   67       | "isa*"
   68       | "isp"
   69       | "isg"
   70       | "isc"
   71       | "isc*"
   72       | variable

   73 hasVerb: "has"
   74        | "haspart"
   75        | "isapart"

   76 doVerb: "do"
   77       | "hdo"
   78       | "!"

   79 preposition: "at"
   80            | "of"
   81            | "with"
   82            | "od"
   83            | "from"
   84            | "to"
   85            | "in"
   86            | "out"
   87            | "where"

   88 literal: "string literal" "langtag"
   89        | "string literal" "langtag" "^" "URI literal"
   90        | "string literal" "langtag" "^" "QName"
   91        | "string literal" "^" "URI literal"
   92        | "string literal" "^" "QName"
   93        | "string literal"
   94        | "integer literal"
   95        | "floating point literal"
   96        | "decimal literal"
   97        | "true"
   98        | "false"

   99 resource: "URI literal"
  100         | "QName"

  101 blankNode: "blank node"


Terminals, with rules where they appear

$end (0) 0
error (256) 31
"no" (258)
"optional" (259)
"some" (260)
"many" (261)
"the" (262)
"if" (263)
"then" (264)
"else" (265)
"unknown" (266)
"fi" (267)
"not" (268)
"and" (269)
"or" (270)
"xor" (271)
"implies" (272)
"causes" (273)
"because" (274)
"any" (275)
"all" (276)
"every" (277)
"while" (278)
"until" (279)
"when" (280)
"forSome" (281)
"forAll" (282)
"me" (283)
"I" (284)
"you" (285)
"it" (286)
"he" (287)
"she" (288)
"here" (289)
"now" (290)
"is" (291) 63
"isa" (292) 66
"iss" (293) 65
"isu" (294) 64
"isa*" (295) 67
"isc" (296) 70
"isg" (297) 69
"isp" (298) 68
"isc*" (299) 71
"has" (300) 73
"haspart" (301) 74
"isapart" (302) 75
"do" (303) 76
"hdo" (304) 77
"!" (305) 78
"at" (306) 79
"of" (307) 80
"with" (308) 81
"od" (309) 82
"from" (310) 83
"to" (311) 84
"in" (312) 12 85
"out" (313) 86
"where" (314) 87
"ho" (315) 21
"rel" (316) 22
"begin" (317) 20
"end" (318) 23
"=" (319) 4
":=" (320) 24
"let" (321)
"::" (322) 14
"**" (323)
"a" (324)
"^" (325) 89 90 91 92
"." (326)
"," (327) 32 41 43
";" (328) 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
"[" (329) 39 40
"]" (330) 39 40
"(" (331) 37 38
")" (332) 37 38
"{" (333) 8 17
"}" (334) 8 17
"true" (335) 97
"false" (336) 98
"@prefix" (337) 9
"@mkb" (338) 10
"@mke" (339) 11
"@base" (340) 18
"PREFIX" (341)
"BASE" (342)
"string literal" (343) 88 89 90 91 92 93
"URI literal" (344) 18 19 89 91 99
"Graph URI literal {" (345)
"blank node" (346) 101
"QName" (347) 90 92 100
"identifier" (348) 19
"langtag" (349) 88 89 90
"integer literal" (350) 94
"floating point literal" (351) 95
"decimal literal" (352) 96
"variable" (353) 62
ERROR_TOKEN (354)


Nonterminals, with rules where they appear

$accept (100)
    on left: 0
Document (101)
    on left: 1, on right: 0
sentenceList (102)
    on left: 2 3, on right: 1 2 8 17
nv (103)
    on left: 4, on right: 34 43 44
pp (104)
    on left: 5 6, on right: 45 46
value (105)
    on left: 7 8, on right: 4 24
prefix (106)
    on left: 9 10 11, on right: 19
viewOption (107)
    on left: 12 13, on right: 16
nameOption (108)
    on left: 14 15, on right: 16
sentence (109)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31, on right:
    2 16
predicateObjectList (110)
    on left: 32 33, on right: 27 32
predicateObject (111)
    on left: 34 35 36, on right: 32 33
collection (112)
    on left: 37 38, on right: 49 58
set (113)
    on left: 39 40, on right: 50 59
objectList (114)
    on left: 41 42, on right: 5 21 22 38 40 41
nvList (115)
    on left: 43 44, on right: 6 43
ppList (116)
    on left: 45 46, on right: 26 29 30 45
subject (117)
    on left: 47 48 49 50 51 52, on right: 20 23 27 28 29 30
predicate (118)
    on left: 53 54 55, on right: 4
object (119)
    on left: 56 57 58 59 60 61, on right: 7 25 26 28 29 30 35 36 41
    42
variable (120)
    on left: 62, on right: 12 14 20 23 24 52 55 61 72
isVerb (121)
    on left: 63, on right: 30 36
hoVerb (122)
    on left: 64 65 66 67 68 69 70 71 72, on right: 35
hasVerb (123)
    on left: 73 74 75, on right: 34
doVerb (124)
    on left: 76 77 78, on right: 25 26 28 29
preposition (125)
    on left: 79 80 81 82 83 84 85 86 87, on right: 5 6 54
literal (126)
    on left: 88 89 90 91 92 93 94 95 96 97 98, on right: 51 60
resource (127)
    on left: 99 100, on right: 47 53 56
blankNode (128)
    on left: 101, on right: 48 57


State 0

    0 $accept: . Document $end

    $default  reduce using rule 3 (sentenceList)

    Document      go to state 1
    sentenceList  go to state 2


State 1

    0 $accept: Document . $end

    $end  shift, and go to state 3


State 2

    1 Document: sentenceList .
    2 sentenceList: sentenceList . sentence

    error                     shift, and go to state 4
    "do"                      shift, and go to state 5
    "hdo"                     shift, and go to state 6
    "!"                       shift, and go to state 7
    "in"                      shift, and go to state 8
    "ho"                      shift, and go to state 9
    "rel"                     shift, and go to state 10
    "begin"                   shift, and go to state 11
    "end"                     shift, and go to state 12
    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "{"                       shift, and go to state 15
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "@prefix"                 shift, and go to state 18
    "@mkb"                    shift, and go to state 19
    "@mke"                    shift, and go to state 20
    "@base"                   shift, and go to state 21
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    $end                      reduce using rule 1 (Document)
    error                     [reduce using rule 13 (viewOption)]
    "do"                      [reduce using rule 13 (viewOption)]
    "hdo"                     [reduce using rule 13 (viewOption)]
    "!"                       [reduce using rule 13 (viewOption)]
    "in"                      [reduce using rule 13 (viewOption)]
    "ho"                      [reduce using rule 13 (viewOption)]
    "rel"                     [reduce using rule 13 (viewOption)]
    "begin"                   [reduce using rule 13 (viewOption)]
    "end"                     [reduce using rule 13 (viewOption)]
    "["                       [reduce using rule 13 (viewOption)]
    "("                       [reduce using rule 13 (viewOption)]
    "{"                       [reduce using rule 13 (viewOption)]
    "true"                    [reduce using rule 13 (viewOption)]
    "false"                   [reduce using rule 13 (viewOption)]
    "@prefix"                 [reduce using rule 13 (viewOption)]
    "@mkb"                    [reduce using rule 13 (viewOption)]
    "@mke"                    [reduce using rule 13 (viewOption)]
    "@base"                   [reduce using rule 13 (viewOption)]
    "string literal"          [reduce using rule 13 (viewOption)]
    "URI literal"             [reduce using rule 13 (viewOption)]
    "blank node"              [reduce using rule 13 (viewOption)]
    "QName"                   [reduce using rule 13 (viewOption)]
    "integer literal"         [reduce using rule 13 (viewOption)]
    "floating point literal"  [reduce using rule 13 (viewOption)]
    "decimal literal"         [reduce using rule 13 (viewOption)]
    "variable"                [reduce using rule 13 (viewOption)]

    prefix      go to state 30
    viewOption  go to state 31
    sentence    go to state 32
    collection  go to state 33
    set         go to state 34
    subject     go to state 35
    variable    go to state 36
    doVerb      go to state 37
    literal     go to state 38
    resource    go to state 39
    blankNode   go to state 40


State 3

    0 $accept: Document $end .

    $default  accept


State 4

   31 sentence: error . ";"

    ";"  shift, and go to state 41


State 5

   76 doVerb: "do" .

    $default  reduce using rule 76 (doVerb)


State 6

   77 doVerb: "hdo" .

    $default  reduce using rule 77 (doVerb)


State 7

   78 doVerb: "!" .

    $default  reduce using rule 78 (doVerb)


State 8

   12 viewOption: "in" . variable

    "variable"  shift, and go to state 29

    variable  go to state 42


State 9

   21 sentence: "ho" . objectList ";"

    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    collection  go to state 43
    set         go to state 44
    objectList  go to state 45
    object      go to state 46
    variable    go to state 47
    literal     go to state 48
    resource    go to state 49
    blankNode   go to state 50


State 10

   22 sentence: "rel" . objectList ";"

    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    collection  go to state 43
    set         go to state 44
    objectList  go to state 51
    object      go to state 46
    variable    go to state 47
    literal     go to state 48
    resource    go to state 49
    blankNode   go to state 50


State 11

   20 sentence: "begin" . variable subject ";"

    "variable"  shift, and go to state 29

    variable  go to state 52


State 12

   23 sentence: "end" . variable subject ";"

    "variable"  shift, and go to state 29

    variable  go to state 53


State 13

   39 set: "[" . "]"
   40    | "[" . objectList "]"

    "["                       shift, and go to state 13
    "]"                       shift, and go to state 54
    "("                       shift, and go to state 14
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    collection  go to state 43
    set         go to state 44
    objectList  go to state 55
    object      go to state 46
    variable    go to state 47
    literal     go to state 48
    resource    go to state 49
    blankNode   go to state 50


State 14

   37 collection: "(" . ")"
   38           | "(" . objectList ")"

    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    ")"                       shift, and go to state 56
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    collection  go to state 43
    set         go to state 44
    objectList  go to state 57
    object      go to state 46
    variable    go to state 47
    literal     go to state 48
    resource    go to state 49
    blankNode   go to state 50


State 15

   17 sentence: "{" . sentenceList "}" ";"

    $default  reduce using rule 3 (sentenceList)

    sentenceList  go to state 58


State 16

   97 literal: "true" .

    $default  reduce using rule 97 (literal)


State 17

   98 literal: "false" .

    $default  reduce using rule 98 (literal)


State 18

    9 prefix: "@prefix" .

    $default  reduce using rule 9 (prefix)


State 19

   10 prefix: "@mkb" .

    $default  reduce using rule 10 (prefix)


State 20

   11 prefix: "@mke" .

    $default  reduce using rule 11 (prefix)


State 21

   18 sentence: "@base" . "URI literal" ";"

    "URI literal"  shift, and go to state 59


State 22

   88 literal: "string literal" . "langtag"
   89        | "string literal" . "langtag" "^" "URI literal"
   90        | "string literal" . "langtag" "^" "QName"
   91        | "string literal" . "^" "URI literal"
   92        | "string literal" . "^" "QName"
   93        | "string literal" .

    "^"        shift, and go to state 60
    "langtag"  shift, and go to state 61

    $default  reduce using rule 93 (literal)


State 23

   99 resource: "URI literal" .

    $default  reduce using rule 99 (resource)


State 24

  101 blankNode: "blank node" .

    $default  reduce using rule 101 (blankNode)


State 25

  100 resource: "QName" .

    $default  reduce using rule 100 (resource)


State 26

   94 literal: "integer literal" .

    $default  reduce using rule 94 (literal)


State 27

   95 literal: "floating point literal" .

    $default  reduce using rule 95 (literal)


State 28

   96 literal: "decimal literal" .

    $default  reduce using rule 96 (literal)


State 29

   62 variable: "variable" .

    $default  reduce using rule 62 (variable)


State 30

   19 sentence: prefix . "identifier" "URI literal" ";"

    "identifier"  shift, and go to state 62


State 31

   16 sentence: viewOption . nameOption sentence ";"

    "variable"  shift, and go to state 29

    "variable"  [reduce using rule 15 (nameOption)]
    $default    reduce using rule 15 (nameOption)

    nameOption  go to state 63
    variable    go to state 64


State 32

    2 sentenceList: sentenceList sentence .

    $default  reduce using rule 2 (sentenceList)


State 33

   49 subject: collection .

    $default  reduce using rule 49 (subject)


State 34

   50 subject: set .

    $default  reduce using rule 50 (subject)


State 35

   27 sentence: subject . predicateObjectList ";"
   28         | subject . doVerb object ";"
   29         | subject . doVerb object ppList ";"
   30         | subject . isVerb object ppList ";"

    "is"        shift, and go to state 65
    "isa"       shift, and go to state 66
    "iss"       shift, and go to state 67
    "isu"       shift, and go to state 68
    "isa*"      shift, and go to state 69
    "isc"       shift, and go to state 70
    "isg"       shift, and go to state 71
    "isp"       shift, and go to state 72
    "isc*"      shift, and go to state 73
    "has"       shift, and go to state 74
    "haspart"   shift, and go to state 75
    "isapart"   shift, and go to state 76
    "do"        shift, and go to state 5
    "hdo"       shift, and go to state 6
    "!"         shift, and go to state 7
    "variable"  shift, and go to state 29

    predicateObjectList  go to state 77
    predicateObject      go to state 78
    variable             go to state 79
    isVerb               go to state 80
    hoVerb               go to state 81
    hasVerb              go to state 82
    doVerb               go to state 83


State 36

   24 sentence: variable . ":=" value ";"
   52 subject: variable .

    ":="  shift, and go to state 84

    $default  reduce using rule 52 (subject)


State 37

   25 sentence: doVerb . object ";"
   26         | doVerb . object ppList ";"

    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    collection  go to state 43
    set         go to state 44
    object      go to state 85
    variable    go to state 47
    literal     go to state 48
    resource    go to state 49
    blankNode   go to state 50


State 38

   51 subject: literal .

    $default  reduce using rule 51 (subject)


State 39

   47 subject: resource .

    $default  reduce using rule 47 (subject)


State 40

   48 subject: blankNode .

    $default  reduce using rule 48 (subject)


State 41

   31 sentence: error ";" .

    $default  reduce using rule 31 (sentence)


State 42

   12 viewOption: "in" variable .

    $default  reduce using rule 12 (viewOption)


State 43

   58 object: collection .

    $default  reduce using rule 58 (object)


State 44

   59 object: set .

    $default  reduce using rule 59 (object)


State 45

   21 sentence: "ho" objectList . ";"
   41 objectList: objectList . "," object

    ","  shift, and go to state 86
    ";"  shift, and go to state 87


State 46

   42 objectList: object .

    $default  reduce using rule 42 (objectList)


State 47

   61 object: variable .

    $default  reduce using rule 61 (object)


State 48

   60 object: literal .

    $default  reduce using rule 60 (object)


State 49

   56 object: resource .

    $default  reduce using rule 56 (object)


State 50

   57 object: blankNode .

    $default  reduce using rule 57 (object)


State 51

   22 sentence: "rel" objectList . ";"
   41 objectList: objectList . "," object

    ","  shift, and go to state 86
    ";"  shift, and go to state 88


State 52

   20 sentence: "begin" variable . subject ";"

    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    collection  go to state 33
    set         go to state 34
    subject     go to state 89
    variable    go to state 90
    literal     go to state 38
    resource    go to state 39
    blankNode   go to state 40


State 53

   23 sentence: "end" variable . subject ";"

    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    collection  go to state 33
    set         go to state 34
    subject     go to state 91
    variable    go to state 90
    literal     go to state 38
    resource    go to state 39
    blankNode   go to state 40


State 54

   39 set: "[" "]" .

    $default  reduce using rule 39 (set)


State 55

   40 set: "[" objectList . "]"
   41 objectList: objectList . "," object

    ","  shift, and go to state 86
    "]"  shift, and go to state 92


State 56

   37 collection: "(" ")" .

    $default  reduce using rule 37 (collection)


State 57

   38 collection: "(" objectList . ")"
   41 objectList: objectList . "," object

    ","  shift, and go to state 86
    ")"  shift, and go to state 93


State 58

    2 sentenceList: sentenceList . sentence
   17 sentence: "{" sentenceList . "}" ";"

    error                     shift, and go to state 4
    "do"                      shift, and go to state 5
    "hdo"                     shift, and go to state 6
    "!"                       shift, and go to state 7
    "in"                      shift, and go to state 8
    "ho"                      shift, and go to state 9
    "rel"                     shift, and go to state 10
    "begin"                   shift, and go to state 11
    "end"                     shift, and go to state 12
    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "{"                       shift, and go to state 15
    "}"                       shift, and go to state 94
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "@prefix"                 shift, and go to state 18
    "@mkb"                    shift, and go to state 19
    "@mke"                    shift, and go to state 20
    "@base"                   shift, and go to state 21
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    error                     [reduce using rule 13 (viewOption)]
    "do"                      [reduce using rule 13 (viewOption)]
    "hdo"                     [reduce using rule 13 (viewOption)]
    "!"                       [reduce using rule 13 (viewOption)]
    "in"                      [reduce using rule 13 (viewOption)]
    "ho"                      [reduce using rule 13 (viewOption)]
    "rel"                     [reduce using rule 13 (viewOption)]
    "begin"                   [reduce using rule 13 (viewOption)]
    "end"                     [reduce using rule 13 (viewOption)]
    "["                       [reduce using rule 13 (viewOption)]
    "("                       [reduce using rule 13 (viewOption)]
    "{"                       [reduce using rule 13 (viewOption)]
    "true"                    [reduce using rule 13 (viewOption)]
    "false"                   [reduce using rule 13 (viewOption)]
    "@prefix"                 [reduce using rule 13 (viewOption)]
    "@mkb"                    [reduce using rule 13 (viewOption)]
    "@mke"                    [reduce using rule 13 (viewOption)]
    "@base"                   [reduce using rule 13 (viewOption)]
    "string literal"          [reduce using rule 13 (viewOption)]
    "URI literal"             [reduce using rule 13 (viewOption)]
    "blank node"              [reduce using rule 13 (viewOption)]
    "QName"                   [reduce using rule 13 (viewOption)]
    "integer literal"         [reduce using rule 13 (viewOption)]
    "floating point literal"  [reduce using rule 13 (viewOption)]
    "decimal literal"         [reduce using rule 13 (viewOption)]
    "variable"                [reduce using rule 13 (viewOption)]

    prefix      go to state 30
    viewOption  go to state 31
    sentence    go to state 32
    collection  go to state 33
    set         go to state 34
    subject     go to state 35
    variable    go to state 36
    doVerb      go to state 37
    literal     go to state 38
    resource    go to state 39
    blankNode   go to state 40


State 59

   18 sentence: "@base" "URI literal" . ";"

    ";"  shift, and go to state 95


State 60

   91 literal: "string literal" "^" . "URI literal"
   92        | "string literal" "^" . "QName"

    "URI literal"  shift, and go to state 96
    "QName"        shift, and go to state 97


State 61

   88 literal: "string literal" "langtag" .
   89        | "string literal" "langtag" . "^" "URI literal"
   90        | "string literal" "langtag" . "^" "QName"

    "^"  shift, and go to state 98

    $default  reduce using rule 88 (literal)


State 62

   19 sentence: prefix "identifier" . "URI literal" ";"

    "URI literal"  shift, and go to state 99


State 63

   16 sentence: viewOption nameOption . sentence ";"

    error                     shift, and go to state 4
    "do"                      shift, and go to state 5
    "hdo"                     shift, and go to state 6
    "!"                       shift, and go to state 7
    "in"                      shift, and go to state 8
    "ho"                      shift, and go to state 9
    "rel"                     shift, and go to state 10
    "begin"                   shift, and go to state 11
    "end"                     shift, and go to state 12
    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "{"                       shift, and go to state 15
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "@prefix"                 shift, and go to state 18
    "@mkb"                    shift, and go to state 19
    "@mke"                    shift, and go to state 20
    "@base"                   shift, and go to state 21
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    error                     [reduce using rule 13 (viewOption)]
    "do"                      [reduce using rule 13 (viewOption)]
    "hdo"                     [reduce using rule 13 (viewOption)]
    "!"                       [reduce using rule 13 (viewOption)]
    "in"                      [reduce using rule 13 (viewOption)]
    "ho"                      [reduce using rule 13 (viewOption)]
    "rel"                     [reduce using rule 13 (viewOption)]
    "begin"                   [reduce using rule 13 (viewOption)]
    "end"                     [reduce using rule 13 (viewOption)]
    "["                       [reduce using rule 13 (viewOption)]
    "("                       [reduce using rule 13 (viewOption)]
    "{"                       [reduce using rule 13 (viewOption)]
    "true"                    [reduce using rule 13 (viewOption)]
    "false"                   [reduce using rule 13 (viewOption)]
    "@prefix"                 [reduce using rule 13 (viewOption)]
    "@mkb"                    [reduce using rule 13 (viewOption)]
    "@mke"                    [reduce using rule 13 (viewOption)]
    "@base"                   [reduce using rule 13 (viewOption)]
    "string literal"          [reduce using rule 13 (viewOption)]
    "URI literal"             [reduce using rule 13 (viewOption)]
    "blank node"              [reduce using rule 13 (viewOption)]
    "QName"                   [reduce using rule 13 (viewOption)]
    "integer literal"         [reduce using rule 13 (viewOption)]
    "floating point literal"  [reduce using rule 13 (viewOption)]
    "decimal literal"         [reduce using rule 13 (viewOption)]
    "variable"                [reduce using rule 13 (viewOption)]

    prefix      go to state 30
    viewOption  go to state 31
    sentence    go to state 100
    collection  go to state 33
    set         go to state 34
    subject     go to state 35
    variable    go to state 36
    doVerb      go to state 37
    literal     go to state 38
    resource    go to state 39
    blankNode   go to state 40


State 64

   14 nameOption: variable . "::"

    "::"  shift, and go to state 101


State 65

   63 isVerb: "is" .

    $default  reduce using rule 63 (isVerb)


State 66

   66 hoVerb: "isa" .

    $default  reduce using rule 66 (hoVerb)


State 67

   65 hoVerb: "iss" .

    $default  reduce using rule 65 (hoVerb)


State 68

   64 hoVerb: "isu" .

    $default  reduce using rule 64 (hoVerb)


State 69

   67 hoVerb: "isa*" .

    $default  reduce using rule 67 (hoVerb)


State 70

   70 hoVerb: "isc" .

    $default  reduce using rule 70 (hoVerb)


State 71

   69 hoVerb: "isg" .

    $default  reduce using rule 69 (hoVerb)


State 72

   68 hoVerb: "isp" .

    $default  reduce using rule 68 (hoVerb)


State 73

   71 hoVerb: "isc*" .

    $default  reduce using rule 71 (hoVerb)


State 74

   73 hasVerb: "has" .

    $default  reduce using rule 73 (hasVerb)


State 75

   74 hasVerb: "haspart" .

    $default  reduce using rule 74 (hasVerb)


State 76

   75 hasVerb: "isapart" .

    $default  reduce using rule 75 (hasVerb)


State 77

   27 sentence: subject predicateObjectList . ";"
   32 predicateObjectList: predicateObjectList . "," predicateObject

    ","  shift, and go to state 102
    ";"  shift, and go to state 103


State 78

   33 predicateObjectList: predicateObject .

    $default  reduce using rule 33 (predicateObjectList)


State 79

   72 hoVerb: variable .

    $default  reduce using rule 72 (hoVerb)


State 80

   30 sentence: subject isVerb . object ppList ";"
   36 predicateObject: isVerb . object

    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    collection  go to state 43
    set         go to state 44
    object      go to state 104
    variable    go to state 47
    literal     go to state 48
    resource    go to state 49
    blankNode   go to state 50


State 81

   35 predicateObject: hoVerb . object

    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    collection  go to state 43
    set         go to state 44
    object      go to state 105
    variable    go to state 47
    literal     go to state 48
    resource    go to state 49
    blankNode   go to state 50


State 82

   34 predicateObject: hasVerb . nv

    "at"           shift, and go to state 106
    "of"           shift, and go to state 107
    "with"         shift, and go to state 108
    "od"           shift, and go to state 109
    "from"         shift, and go to state 110
    "to"           shift, and go to state 111
    "in"           shift, and go to state 112
    "out"          shift, and go to state 113
    "where"        shift, and go to state 114
    "URI literal"  shift, and go to state 23
    "QName"        shift, and go to state 25
    "variable"     shift, and go to state 29

    nv           go to state 115
    predicate    go to state 116
    variable     go to state 117
    preposition  go to state 118
    resource     go to state 119


State 83

   28 sentence: subject doVerb . object ";"
   29         | subject doVerb . object ppList ";"

    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    collection  go to state 43
    set         go to state 44
    object      go to state 120
    variable    go to state 47
    literal     go to state 48
    resource    go to state 49
    blankNode   go to state 50


State 84

   24 sentence: variable ":=" . value ";"

    "["                       shift, and go to state 13
    "("                       shift, and go to state 14
    "{"                       shift, and go to state 121
    "true"                    shift, and go to state 16
    "false"                   shift, and go to state 17
    "string literal"          shift, and go to state 22
    "URI literal"             shift, and go to state 23
    "blank node"              shift, and go to state 24
    "QName"                   shift, and go to state 25
    "integer literal"         shift, and go to state 26
    "floating point literal"  shift, and go to state 27
    "decimal literal"         shift, and go to state 28
    "variable"                shift, and go to state 29

    value       go to state 122
    collection  go to state 43
    set         go to state 44
    object      go to state 123
    variable    go to state 47
    literal     go to state 48
    resource    go to state 49
    blankNode   go to state 50


State 85

   25 sentence: doVerb object . ";"
   26         | doVerb object . ppList ";"

    "at"     shift, and go to state 106
    "of"     shift, and go to state 107
    "with"   shift, and go to state 108
    "od"     shift, and go to state 109
    "from"   shift, and go to state 110
    "to"     shift, and go to state 111
    "in"     shift, and go to state 112
    "out"    shift, and go to state 113
    "where"  shift, and go to state 114
    ";"      shift, and go to state 124

    pp           go to state 125
    ppList       go to state 126
    preposition  go to state 127


State 86

   41 objectList: objectList "," . object
